Simplify page title to 'Mino'

--- a/Mino_Homepage/index.html
+++ b/Mino_Homepage/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/Mino/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mino - 개인 금융 가계부</title>
+  <title>Mino</title>
 </head>
 
 <body>
