--- a/Mino_Homepage/index.html
+++ b/Mino_Homepage/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/Mino/favicon.png?v=2" />
+  <link rel="icon" href="/Mino/favicon.ico?v=4" />
+  <link rel="icon" type="image/png" href="/Mino/favicon.png?v=4" />
+  <link rel="apple-touch-icon" href="/Mino/apple-touch-icon.png?v=4" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mino</title>
 </head>
