Final attempt: Use official GitHub favicon URL directly

--- a/Web/index.html
+++ b/Web/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/Mino/favicon.ico?v=4" />
-  <link rel="icon" type="image/png" href="/Mino/favicon.png?v=4" />
+  <link rel="icon" href="https://github.com/favicon.ico?v=999">
+  <link rel="icon" href="https://github.com/favicon.ico?v=999">
   <link rel="apple-touch-icon" href="/Mino/apple-touch-icon.png?v=4" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mino</title>
